# QualityControl

Modules/: CMakeLists.txt
Modules/CTP/: CMakeLists.txt  dpl-config.json  test.root
Modules/CTP/include/CTP/: Example2Check.h  RawDataQcTask.h
Modules/CTP/src/: Example2Check.cxx  RawDataQcTask.cxx
Modules/CTP/test/: testQcCTP.cxx
Modules/TST/: CMakeLists.txt
Modules/TST/include/TST/: LinkDef.h  RawDataQcTask.h
Modules/TST/src/: RawDataQcTask.cxx
Modules/TST/test/: testQcTST.cxx
